--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -42,6 +42,7 @@
         android:visibility="visible" />
 
     <Button
+        android:id="@+id/buttonlogin"
         android:layout_width="328dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -50,7 +51,7 @@
         app:cornerRadius="25dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonregist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Not Have Account? Sign Up Now"
