--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,10 +7,7 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_profile"
+        android:id="@+id/fragment_profile"
         android:icon="@drawable/ic_person"
         android:title="@string/title_profile" />
-
-
-
 </menu>
