--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -50,13 +50,17 @@
         android:fontFamily="@font/poppins_bold"
         app:cornerRadius="25dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonregist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/gray"
+        android:elevation="0dp"
+        android:outlineProvider="none"
+        android:fontFamily="@font/poppins_bold"
         android:text="Not Have Account? Sign Up Now"
-        android:fontFamily="@font/poppins"
+        android:textColor="@color/black"
         android:textSize="10sp"
-        android:background="@null"
-        android:textColor="@color/black" />
+        app:cornerRadius="25dp"
+        app:rippleColor="@android:color/transparent" />
 </LinearLayout>
