--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -174,6 +174,7 @@
                     android:weightSum="4">
 
                     <TextView
+                        android:id="@+id/textViewProtein"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -182,7 +183,9 @@
                         android:text="100mg\nProtein"
                         android:textColor="#000000" />
 
+
                     <TextView
+                        android:id="@+id/textViewFat"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -192,6 +195,7 @@
                         android:textColor="#000000" />
 
                     <TextView
+                        android:id="@+id/textViewCarbo"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -201,6 +205,7 @@
                         android:textColor="#000000" />
 
                     <TextView
+                        android:id="@+id/textViewCalories"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
