--- a/app/src/main/res/layout/item_add_food.xml
+++ b/app/src/main/res/layout/item_add_food.xml
@@ -51,7 +51,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:buttonTint="@color/white"
-                        android:checked="true" />
+                        android:checked="false" />
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
