--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -401,7 +401,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/poppins"
-                    android:text="Karbohidrat: 0"
+                    android:text="Carbohydrate: 0"
                     android:textColor="#000000" />
 
                 <TextView
