--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -55,13 +55,71 @@
                 android:textColor="@color/black"
                 android:textSize="14sp" />
 
+            <!-- Additional Info Section -->
+            <TextView
+                android:id="@+id/tv_additional_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="Personal Information"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <!-- Birthdate -->
+            <TextView
+                android:id="@+id/tv_birthdate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="Birthdate: 2024-06-15"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <!-- Gender -->
+            <TextView
+                android:id="@+id/tv_gender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="Gender: Male"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <!-- Weight -->
+            <TextView
+                android:id="@+id/tv_weight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="Weight: 50.9 kg"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <!-- Height -->
+            <TextView
+                android:id="@+id/tv_height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="Height: 175 cm"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <!-- Divider Line -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="12dp"
+                android:background="@android:color/darker_gray" />
+
             <!-- Personal Information -->
             <TextView
                 android:id="@+id/tv_personal_information"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="Personal Information"
+                android:text="Update Personal Information"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -79,20 +137,6 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/full_name" />
             </com.google.android.material.textfield.TextInputLayout>
-
-            <!--            &lt;!&ndash; Last Name Input &ndash;&gt;-->
-            <!--            <com.google.android.material.textfield.TextInputLayout-->
-            <!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_marginTop="12dp">-->
-
-            <!--                <com.google.android.material.textfield.TextInputEditText-->
-            <!--                    android:id="@+id/edLastName"-->
-            <!--                    android:layout_width="match_parent"-->
-            <!--                    android:layout_height="wrap_content"-->
-            <!--                    android:hint="@string/last_name" />-->
-            <!--            </com.google.android.material.textfield.TextInputLayout>-->
 
             <!-- Phone Number Input -->
             <com.google.android.material.textfield.TextInputLayout
@@ -128,7 +172,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="Personal Nutrition"
+                android:text="Update Personal Nutrition"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
