--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -327,6 +327,7 @@
                     android:textColor="#000000" />
 
                 <TextView
+                    android:id="@+id/food1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -334,6 +335,7 @@
                     android:hint="Soup" />
 
                 <TextView
+                    android:id="@+id/food2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -341,6 +343,7 @@
                     android:hint="Ayam" />
 
                 <TextView
+                    android:id="@+id/food3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
