--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -112,8 +112,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/poppins_bold"
-                        android:text="DANGEROUS"
-                        android:textColor="#FF0000"
+                        android:text="Input Value First"
+                        android:textColor="#000000"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
@@ -124,7 +124,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:fontFamily="@font/poppins"
-                        android:text="Your shouldn't consume cholesterol > 300 mg"
+                        android:text="-"
                         android:textColor="#000000"
                         android:textSize="12sp" />
                 </LinearLayout>
