Update Profile Fix but minus date

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -205,18 +205,18 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- BMI Input -->
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp">
+<!--            <com.google.android.material.textfield.TextInputLayout-->
+<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="12dp">-->
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edBMI"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="BMI" />
-            </com.google.android.material.textfield.TextInputLayout>
+<!--                <com.google.android.material.textfield.TextInputEditText-->
+<!--                    android:id="@+id/edBMI"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:hint="BMI" />-->
+<!--            </com.google.android.material.textfield.TextInputLayout>-->
 
             <!-- Activity Factor Dropdown -->
             <com.google.android.material.textfield.TextInputLayout
