--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,6 +8,7 @@
     android:background="@color/gray">
 
     <ImageView
+        android:id="@+id/logocoles"
         android:layout_width="250dp"
         android:layout_height="227dp"
         android:layout_marginTop="50dp"
